fix: fixed change name not working properly

--- a/public/PCEconomic/src/main/resources/templates/areaclients.html
+++ b/public/PCEconomic/src/main/resources/templates/areaclients.html
@@ -33,13 +33,12 @@
 
                             <div>
                                 <h5 style="font-weight: bold">CAMBIAR NOMBRE</h5>
-                                <form method="post" class="needs-validation" novalidate
+                                <form method="post" th:action="@{/areaclients/changeName}" class="needs-validation" novalidate
                                 th:object="${changeName}">
                                     <div class="row">
                                         <div class="col-md-4">
-                                            <label for="old-name">Antiguo Nombre</label>
-                                            <input th:field="*{oldName}" class="form-control" type="text" name="name" id="old-name"
-                                                   placeholder="Antiguo Nombre"/>
+                                            <label>Antiguo Nombre</label>
+                                            <p class="m-2" th:text="${user.persona.name}"></p>
                                         </div>
 
                                         <div class="col-md-4">
