--- a/public/PCEconomic/src/main/resources/templates/error.html
+++ b/public/PCEconomic/src/main/resources/templates/error.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="es" xmlns:th="http://www.thymeleaf.org">
     <head th:replace="layout/layout.html :: head"></head>
-    <body>
-        <header th:replace="layout/layout.html :: header"></header>
-        <main class="container text-center">
-            <h1>ERROR 404</h1>
-            <h2>La página que buscas no existe o ha sido eliminada</h2>
-            <a href="/" class="btn btn-primary">Volver a la página principal</a>
+    <header th:replace="layout/layout.html :: header2"></header>
+    <body class="bgbd">
+        <main class="container-lg bg-cont mt-md-5 mt-1 text-center">
+            <h1 class="mt-2 mb-2" >ERROR 404</h1>
+            <h2 class="mt-3 mb-4" >La página que buscas no existe o ha sido eliminada</h2>
+            <a th:href="@{/}" class="btn btn-primary mb-5">Volver a la página principal</a>
         </main>
         <footer th:replace="layout/layout.html :: footer"></footer>
     </body>
