refactor: translate to spanish

--- a/public/PCEconomic/src/main/resources/templates/areaclients.html
+++ b/public/PCEconomic/src/main/resources/templates/areaclients.html
@@ -230,10 +230,10 @@
                                                         </div>
 
                                                         <div class="col-12">
-                                                            <label for="carrer">Carrer</label>
+                                                            <label for="carrer">Calle</label>
                                                             <input th:field="*{calle}" class="form-control" type="text" name="carrer"
                                                                    id="carrer" required
-                                                                   placeholder="Carrer"/>
+                                                                   placeholder="Calle"/>
                                                         </div>
 
                                                         <div class="col-4">
