--- a/public/PCEconomic/src/main/resources/templates/areaclients.html
+++ b/public/PCEconomic/src/main/resources/templates/areaclients.html
@@ -204,9 +204,9 @@
                                         <p>Actualmente tienes las siguientes direcciones de envio</p>
                                         <p>Pulse aqui si le interesa añadir alguna!</p>
 
-                                        <div th:each="direccio : ${user.persona.direccions}">
-                                            <div th:text="${direccio}"></div>
-                                        </div>
+                                        <ul class="list-group list-group-flush">
+                                            <li th:each="direccio : ${user.persona.direccions}" class="list-group-item" th:text="${direccio}"></li>
+                                        </ul>
 
                                         <button type="button" class="w-25 btn btn-pc-economic-dark" data-bs-toggle="modal"
                                                 data-bs-target="#exampleModal">
@@ -288,13 +288,18 @@
                                                                    class="form-control" type="text" name="provincia" id="provincia" required
                                                                    placeholder="Provincia"/>
                                                         </div>
+
+                                                        <div class="col-12">
+                                                            <input th:field="*{principal}" class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                            <label class="form-check-label" for="flexCheckDefault">
+                                                                Es esta tu direccion principal?
+                                                            </label>
+                                                        </div>
                                                     </div>
 
                                                     <div class="d-flex flex-row-reverse mt-2">
-                                                        <button class="btn btn-pc-economic-dark" type="submit">Añadir
-                                                        </button>
+                                                        <button class="btn btn-pc-economic-dark" type="submit">Añadir</button>
                                                     </div>
-
                                                 </form>
                                             </div>
                                         </div>
